fix: spacing between tags

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,6 +303,7 @@ pre {
     border-radius: 3px;
     padding: .125rem .25rem;
     margin-bottom: .5rem;
+    margin-right: .5rem;
 }
 
 .tag-list__item a {
